--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@material-ui/core": "^5.0.0-beta.5",
     "@mui/material": "^5.0.2",
     "@types/react": "^17.0.27",
+    "axios": "^0.22.0",
     "mobx": "^6.3.3",
     "mobx-react": "^7.2.0",
     "mobx-react-lite": "^3.2.1",
