--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^5.0.0-beta.5",
+    "@mui/icons-material": "^5.0.3",
     "@mui/material": "^5.0.2",
     "@types/react": "^17.0.27",
     "axios": "^0.22.0",
