--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "mobx": "^6.3.3",
     "mobx-react": "^7.2.0",
     "mobx-react-lite": "^3.2.1",
+    "mobx-state-tree": "^5.0.3",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
