--- a/package.json
+++ b/package.json
@@ -27,17 +27,21 @@
     "@mui/material": "^5.0.2",
     "@types/react": "^17.0.27",
     "axios": "^0.22.0",
+    "isomorphic-fetch": "^3.0.0",
     "mobx": "^6.3.3",
     "mobx-react": "^7.2.0",
     "mobx-react-lite": "^3.2.1",
-    "mobx-state-tree": "^5.0.3",
     "next": "^11.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "typescript": "^4.4.3"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-decorators": "^7.15.8",
+    "@types/isomorphic-fetch": "^0.0.35",
     "@types/node": "^16.10.3",
+    "@types/react-dom": "^17.0.10",
+    "@types/react-router-dom": "^5.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
     "eslint": "^7.32.0",
@@ -46,6 +50,8 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.26.1",
-    "eslint-plugin-react-hooks": "^4.2.0"
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "jwt-decode": "^3.1.2",
+    "react-router-dom": "^5.3.0"
   }
 }
