--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mobx-react-lite": "^3.2.1",
     "next": "^11.1.2",
     "react": "^17.0.2",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^17.0.2",
     "typescript": "^4.4.3"
   },
@@ -40,6 +41,7 @@
     "@babel/plugin-proposal-decorators": "^7.15.8",
     "@types/isomorphic-fetch": "^0.0.35",
     "@types/node": "^16.10.3",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@types/react-dom": "^17.0.10",
     "@types/react-router-dom": "^5.3.1",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
